cluster/gitops/downloads/byparr/app/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: byparr
specs:
  - description: byparr
    endpointSelector:
      matchLabels:
        app.kubernetes.io/name: byparr
        app.kubernetes.io/controller: byparr
        app.kubernetes.io/instance: byparr
    ingress:
      # Kubelet for healthcheck
      - fromEntities:
          - host
        toPorts: &webservice_ports
          - ports:
              - port: "8191"
                protocol: TCP
      # From jackett
      - fromEndpoints:
          - matchLabels:
              app.kubernetes.io/name: jackett
              app.kubernetes.io/controller: jackett
              app.kubernetes.io/instance: jackett
        toPorts: *webservice_ports
